# vanilla-prime-utility

./: .gitignore  README.md  meson.build
data/: meson.build  org.vanillaos.PrimeUtility.appdata.xml.in  org.vanillaos.PrimeUtility.desktop.in  org.vanillaos.PrimeUtility.gschema.xml
data/icons/: meson.build
debian/: changelog  control  copyright  files
po/: LINGUAS  POTFILES  af.po  am.po  an.po  ar.po  ar_MA.po  arn.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fa_AF.po  (+102 more)
vanilla_prime_utility/: main.py  meson.build  prime-utility.gresource.xml  vanilla-prime-utility.in
vanilla_prime_utility/gtk/: help-overlay.ui  profile.ui  window-installation.ui  window-main.ui  window-switch.ui
vanilla_prime_utility/utils/: meson.build  run_async.py  wrapper.py
vanilla_prime_utility/widgets/: meson.build  profile.py
vanilla_prime_utility/windows/: installation_window.py  main_window.py  meson.build  switch_window.py
